sauvegarde des modifications du notebook

--- a/Gallica_App/notebooks/pfee_bnf_full.ipynb
+++ b/Gallica_App/notebooks/pfee_bnf_full.ipynb
@@ -1246,6 +1246,7 @@
     }
    ],
    "source": [
+    "import pickle\n",
     "from detectron2.utils.visualizer import ColorMode\n",
     "from detectron2.engine import DefaultPredictor\n",
     "#Use the final weights generated after successful training for inference  \n",
