--- a/README
+++ b/README
@@ -1,25 +1,26 @@
-# gallica app
-## Requirement 
+# Gallica BNF app by EPITA 
+### Authors : 
+Vincent THONG, Zoe Sellos, Yanis Farhat, Benjamin Clene, Maxime Boy-Arnould
+### Supervised by: 
+Jean-Philippe Moreux (BNF)
+Joseph Chazalon (EPITA)
+## Requirements to run the environment 
 - Nvidia GPU
   Nvidia Container Toolkit : https://docs.nvidia.com/datacenter/cloud-native/container-toolkit/latest/install-guide.html
-
+# Docker Tutorial https://docs.docker.com/get-started/
 - Docker: https://docs.docker.com/get-docker
   Docker supported GPU : https://docs.docker.com/config/containers/resource_constraints/#gpu
 
-
-
-# Docker Tutorial https://docs.docker.com/get-started/
-# COMMAND TO RUN :
+# Command to run:
 # building image
 docker-compose build
 # start container
 docker compose up
-# Specific container in docker compose
-docker-compose up -d image container_name
-# Gradio App launched at http://localhost:7860/
-# Stop containers
-docker-compose down
-# Running containers 
-docker-compose ps
-# Remove every data system, can be replaced by image, colume, network : Warning it may erase everything (inn Windows that doesn't work at all ;) ) 
-docker system prune 
+# after this commands you can get a link with a tocken 
+# The port is localhost:8888
+# you can access to the environment in VSCODE by attaching to it with Docker Extension
+
+# Running the app 
+cd app; python3 app.py
+# the port to access is http://localhost:7860/   (a link will appear with 0000:7860 this one doesn't work)
+
